--- a/GitDemo/res/values/strings.xml
+++ b/GitDemo/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">GitDemo</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">b2</string>
     <string name="action_settings">Settings</string>
 
 </resources>
